--- a/index.html
+++ b/index.html
@@ -5,14 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title></title>
-    <!-- bootstrap link -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
+    <title>VibeNest</title>
+
     <!-- style link  -->
     <link rel="stylesheet" href="./style.css" />
     <!-- font awsome link  -->
@@ -23,6 +17,37 @@
     <!-- font links  -->
   </head>
   <body>
+    <header class="header">
+      <nav class="container navbar">
+        <div class="logo">VibeNest</div>
+        <ul class="nav">
+          <a href="#hero">
+            <li class="nav-link">Overview</li>
+          </a>
+          <a href="#music">
+            <li class="nav-link">Music</li>
+          </a>
+          <a href="#video">
+            <li class="nav-link">Video</li>
+          </a>
+          <a href="#gift">
+            <li class="nav-link">Gift Cards</li>
+          </a>
+        </ul>
+      </nav>
+    </header>
+    <div class="hero">
+      <div class="container hero-content">
+        <h1 class="hero-title">VibeNest</h1>
+        <h2 class="hero-subtitle">
+          Your Music,Movies , and Tv Shows takes center stage
+        </h2>
+        <p class="hero-description">
+          A vibrant sanctuary for music enthusiasts to explore diverse sounds,
+          create inspiring melodies, and share their rhythmic passions.
+        </p>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
