--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         </p>
       </div>
     </div>
+
+    <section class="music-section">
+      <div class="container"></div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
