--- a/index.html
+++ b/index.html
@@ -50,7 +50,25 @@
     </div>
 
     <section class="music-section">
-      <div class="container"></div>
+      <div class="music">
+        <h1 class="music-title"><i class="fa-solid fa-music"></i> Music</h1>
+        <h2 class="music-subtitle">45 Million + songs. Zero ads</h2>
+        <p class="music-desc">
+          stream over 45 million+ tracks from artists around the globe. Discover
+          an extensive library of genres, curated playlists, and trending hits
+          tailored to every mood and moment. Whether you’re an artist looking to
+          share your creations or a listener exploring fresh sounds, VibeNest
+          provides a seamless platform for streaming, sharing, and discovering
+          music.
+        </p>
+        <button class="music-btn">Start Your Trial Now</button>
+        <p class="music-para">
+          Orange music is available in VibeNest ,and for IOS and Android devices
+        </p>
+      </div>
+      <div class="container ipad">
+        <img src="./Assets/ipad-iphone.png" alt="" class="ipad-iphone" />
+      </div>
     </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
