--- a/index.html
+++ b/index.html
@@ -69,8 +69,6 @@
       <div class="container ipad">
         <img src="./Assets/ipad-iphone.png" alt="" class="ipad-iphone" />
       </div>
-    </section>
-    <section class="mac">
       <div class="container mac-section">
         <h2 class="mac-title">
           The movie and TV collection you always wished for is Granted
@@ -82,14 +80,14 @@
           to all tastes with a diverse library spanning genres and languages.
           Enjoy personalized recommendations, curated playlists, and exclusive
           content tailored to your preferences. Stream in stunning quality,
-          bookmark favorites, and stay updated with the latest releases. Whether
-          you’re in the mood for binge-worthy series or cinematic masterpieces,
-          VibeNest brings entertainment to your screen, seamlessly blending
-          music, movies, and TV shows into one immersive experience.
+          bookmark favorites, and stay updated with the latest releases.
         </p>
         <button class="mac-btn">Read More</button>
+
+        <img src="./Assets/mac.png" alt="" class="mac">
       </div>
     </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
