entertainmnet section completed

--- a/index.html
+++ b/index.html
@@ -65,29 +65,41 @@
         <p class="music-para">
           Orange music is available in VibeNest ,and for IOS and Android devices
         </p>
-      </div>
-      <div class="container ipad">
-        <img src="./Assets/ipad-iphone.png" alt="" class="ipad-iphone" />
-      </div>
-      <div class="container mac-section">
-        <h2 class="mac-title">
-          The movie and TV collection you always wished for is Granted
-        </h2>
-        <p class="mac-desc">
-          VibeNest isn’t just for music lovers—it’s a complete entertainment hub
-          featuring an extensive collection of TV shows and movies. From
-          blockbuster hits to indie gems and timeless classics, VibeNest caters
-          to all tastes with a diverse library spanning genres and languages.
-          Enjoy personalized recommendations, curated playlists, and exclusive
-          content tailored to your preferences. Stream in stunning quality,
-          bookmark favorites, and stay updated with the latest releases.
-        </p>
-        <button class="mac-btn">Read More</button>
-
-        <img src="./Assets/mac.png" alt="" class="mac">
+        <div class="container ipad">
+          <img src="./Assets/ipad-iphone.png" alt="" class="ipad-iphone" />
+        </div>
       </div>
     </section>
+    <div class="container mac-section">
+      <h2 class="mac-title">
+        The movie and TV collection you always wished for is Granted
+      </h2>
+      <p class="mac-desc">
+        VibeNest isn’t just for music lovers—it’s a complete entertainment hub
+        featuring an extensive collection of TV shows and movies. From
+        blockbuster hits to indie gems and timeless classics, VibeNest caters to
+        all tastes with a diverse library spanning genres and languages. Enjoy
+        personalized recommendations, curated playlists, and exclusive content
+        tailored to your preferences. Stream in stunning quality, bookmark
+        favorites, and stay updated with the latest releases.
+      </p>
+      <button class="mac-btn">Read More</button>
 
+      <img src="./Assets/mac.png" alt="" class="mac" />
+    </div>
+    <section class="entertainment">
+        <div class="entertainment-sec">
+          <h1 class="entertainment-title">A World of Entertainment.</h1>
+          <p class="entertainment-desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+            suscipit accusantium cum quia aliquam aliquid magnam, odio quas
+            neque tenetur odit? Voluptate ut nostrum odio nobis impedit
+            provident pariatur repudiandae, assumenda possimus perspiciatis?
+            Aperiam esse numquam sint ipsam odio iste accusamus eaque error
+            deleniti minima? Beatae, doloremque suscipit. Corrupti, odit.
+          </p>
+        </div>
+      </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
