--- a/index.html
+++ b/index.html
@@ -88,18 +88,38 @@
       <img src="./Assets/mac.png" alt="" class="mac" />
     </div>
     <section class="entertainment">
-        <div class="entertainment-sec">
-          <h1 class="entertainment-title">A World of Entertainment.</h1>
-          <p class="entertainment-desc">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
-            suscipit accusantium cum quia aliquam aliquid magnam, odio quas
-            neque tenetur odit? Voluptate ut nostrum odio nobis impedit
-            provident pariatur repudiandae, assumenda possimus perspiciatis?
-            Aperiam esse numquam sint ipsam odio iste accusamus eaque error
-            deleniti minima? Beatae, doloremque suscipit. Corrupti, odit.
-          </p>
+      <div class="entertainment-sec">
+        <h1 class="entertainment-title">A World of Entertainment.</h1>
+        <p class="entertainment-desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+          suscipit accusantium cum quia aliquam aliquid magnam, odio quas neque
+          tenetur odit? Voluptate ut nostrum odio nobis impedit provident
+          pariatur repudiandae, assumenda possimus perspiciatis? Aperiam esse
+          numquam sint ipsam odio iste accusamus eaque error deleniti minima?
+          Beatae, doloremque suscipit. Corrupti, odit.
+        </p>
+      </div>
+    </section>
+
+    <section class="gift">
+      <div class="container gift-content">
+        <div class="gift-img">
+          <img src="./Assets/gift_card.png" alt="" class="gift-card" />
         </div>
-      </section>
+        <div class="gift-desc">
+          <h1 class="gift-title">Gift Card</h1>
+          <p class="gift-para">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius sed
+            consequuntur molestiae sunt atque dolore, quod ipsum consequatur
+            ratione maxime, eligendi ducimus, totam similique tempore inventore
+            libero minima distinctio. Est voluptatibus ipsum aliquam. Ut atque
+            saepe aliquam et repellendus? Alias, autem quia.
+          </p>
+          <h2 class="gift-sub">Already have an orange VibeNest Music gift Card?</h2>
+          
+        </div>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
