--- a/index.html
+++ b/index.html
@@ -115,11 +115,14 @@
             libero minima distinctio. Est voluptatibus ipsum aliquam. Ut atque
             saepe aliquam et repellendus? Alias, autem quia.
           </p>
-          <h2 class="gift-sub">Already have an orange VibeNest Music gift Card?</h2>
-          
+          <h2 class="gift-sub">
+            Already have an orange VibeNest Music gift Card?
+          </h2>
         </div>
       </div>
     </section>
+
+    <!-- footer started  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
