--- a/index.html
+++ b/index.html
@@ -123,6 +123,42 @@
     </section>
 
     <!-- footer started  -->
+    <footer class="footer">
+      <div class="container footer-content">
+        <ul>
+          <h1 class="footer-head">Shop & Learn</h1>
+          <li class="footer-desc">Music</li>
+          <li class="footer-desc">Movies</li>
+          <li class="footer-desc">Shows</li>
+          <li class="footer-desc">Apps</li>
+          <li class="footer-desc">Gift Cards</li>
+        </ul>
+        <ul>
+          <h1 class="footer-head">Orange Store</h1>
+          <li class="footer-desc">Find a Store</li>
+          <li class="footer-desc">Today at Orange</li>
+          <li class="footer-desc">Orange Camp</li>
+          <li class="footer-desc">Financing</li>
+          <li class="footer-desc">Order Status</li>
+        </ul>
+        <ul>
+          <h1 class="footer-head">Education and Buisness</h1>
+          <li class="footer-desc">Orange and Education</li>
+          <li class="footer-desc">Shop for College</li>
+          <li class="footer-desc">Orange & Buisness</li>
+          <li class="footer-desc">Shop for Buisness</li>
+          <li class="footer-desc">Jobs</li>
+        </ul>
+        <ul>
+          <h1 class="footer-head">About Orange</h1>
+          <li class="footer-desc">Newsroom</li>
+          <li class="footer-desc">Orange Leadership</li>
+          <li class="footer-desc">Investors</li>
+          <li class="footer-desc">Events</li>
+          <li class="footer-desc">contact Orange</li>
+        </ul>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
