--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </div>
 
-    <section class="music-section">
+    <section class="music-section" id="hero">
       <div class="music">
         <h1 class="music-title"><i class="fa-solid fa-music"></i> Music</h1>
         <h2 class="music-subtitle">45 Million + songs. Zero ads</h2>
@@ -70,7 +70,7 @@
         </div>
       </div>
     </section>
-    <div class="container mac-section">
+    <div class="container mac-section" id="music">
       <h2 class="mac-title">
         The movie and TV collection you always wished for is Granted
       </h2>
@@ -87,7 +87,7 @@
 
       <img src="./Assets/mac.png" alt="" class="mac" />
     </div>
-    <section class="entertainment">
+    <section class="entertainment" id="video">
       <div class="entertainment-sec">
         <h1 class="entertainment-title">A World of Entertainment.</h1>
         <p class="entertainment-desc">
@@ -101,7 +101,7 @@
       </div>
     </section>
 
-    <section class="gift">
+    <section class="gift" id="gift">
       <div class="container gift-content">
         <div class="gift-img">
           <img src="./Assets/gift_card.png" alt="" class="gift-card" />
@@ -123,7 +123,7 @@
     </section>
 
     <!-- footer started  -->
-    <footer class="footer">
+    <footer class="footer" >
       <div class="container footer-content">
         <ul>
           <h1 class="footer-head">Shop & Learn</h1>
